# agentic-spendguard

./: .dockerignore  .gitignore  .trivyignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  pnpm-lock.yaml  pnpm-workspace.yaml
adapters/pydantic-ai/: Makefile  pyproject.toml
benchmarks/predictor-upgrade/: Cargo.toml  RESULTS.md  calibration_synthetic.py
benchmarks/predictor-upgrade/src/: harness.rs  main.rs  report.rs
benchmarks/tokenizer/: Cargo.toml
benchmarks/tokenizer/benches/: tier2_library.rs
contrib/output_predictor_template/: .gitignore  Dockerfile  README.md  backtest_harness.py  conformance_test.py  feature_extractor.py  gen_proto.sh  model_predictor_stub.py  mtls_setup.md  predictor_server.py  pyproject.toml  requirements.txt  svid_validation.py
contrib/output_predictor_template/data/: sample_audit_data.csv
crates/spendguard-prediction-mirror/: Cargo.toml
crates/spendguard-prediction-mirror/src/: lib.rs
crates/spendguard-provider-routing/: Cargo.toml
crates/spendguard-provider-routing/src/: lib.rs
crates/spendguard-tokenizer/: Cargo.toml  LICENSE_NOTICES.md
crates/spendguard-tokenizer/data/: recompute_sha256.sh
crates/spendguard-tokenizer/examples/: discover_fixture_tokens.rs
crates/spendguard-tokenizer/src/: dispatch.rs  encoder_cache.rs  error.rs  lib.rs  request_caps.rs  tier3.rs  versions.rs
crates/spendguard-tokenizer/tests/: cross_check_fixture_schema.rs  license_notices.rs  seed_parity.rs
examples/claude-agent-sdk/: README.md  example.py  pyproject.toml
plugins/langflow/: .gitignore  README.md  pyproject.toml
plugins/langflow/metadata/: spendguard_chat_model_wrapper.yaml
plugins/langflow/tests/: conftest.py  test_build_model.py  test_component_skeleton.py  test_install_script.py  test_run_context_autobind.py
sdk/python/: .coverage  CHANGELOG.md  LICENSE_NOTICES.md  Makefile  README.md  pyproject.toml
sdk/python/examples_pydantic_ai/: basic_agent.py
sdk/python/tests/: test_cross_language_fixtures.py  test_litellm_commit_unit.py  test_litellm_direct_acompletion.py  test_litellm_failure_unit.py  test_litellm_init.py  test_litellm_missing_extra.py  test_litellm_precall_outcomes.py  test_litellm_precall_unit.py  test_litellm_skeleton.py  test_litellm_streaming_unit.py  test_prompt_hash.py  test_session_reservation.py  test_stop_run_projection.py
services/auth/: Cargo.toml
services/auth/src/: approver_policy.rs  lib.rs  rbac.rs
services/bundle_registry/: Cargo.toml  README.md
services/bundle_registry/docs/: customer-registry-import.md  mirror-ecr.md  mirror-gar.md
services/bundle_registry/src/: apply.rs  bundle.rs  listener.rs  main.rs
services/bundle_registry/tools/: bundle-pack.sh  fetch-pricing-snapshot.sh  verify-bundle.sh
services/bundle_registry/workflows/: publish-contract-bundle.yml  publish-pricing-bundle.yml  publish-schema-bundle.yml
services/calibration_report/: Cargo.toml  README.md
services/calibration_report/src/: cli.rs  lib.rs  main.rs  recommendations.rs  report.rs  self_audit.rs  sql_queries.rs  verify_chain_wrapper.rs
services/calibration_report/tests/: cli_smoke.rs  sample_output.rs  scenarios.rs
services/canonical_ingest/: Cargo.toml  README.md  build.rs
services/canonical_ingest/migrations/: 0000_extensions.sql  0001_schema_bundles.sql  0002_canonical_events.sql  0003_audit_quarantine.sql  0004_ingest_offset_allocator.sql  0005_immutability_triggers.sql  0006_pricing_table.sql  0007_audit_signature_quarantine.sql  0008_s7_validity_window_reasons.sql  0009_signing_keys_registry.sql  0010_s13_pricing_audit.sql  0011_add_failure_class.sql  0012_cost_advisor_safe_decode.sql  0013_canonical_events_prediction_columns.sql  0014_schema_bundle_prediction_v1alpha1.sql  0015_audit_outcome_quarantine_prediction_columns.sql  0016_output_distribution_cache.sql  0017_run_length_distribution_cache.sql  0018_canonical_events_aggregator_mirror_columns.sql  0019_audit_outcome_quarantine_aggregator_mirror_columns.sql  0020_event_replay_dedup.sql  0021_canonical_events_run_recovery_index.sql  0022_prediction_drift_alert_cooldowns.sql  0023_cache_rls_no_nil_sentinel.sql  0024_event_replay_dedup_reaper.sql  README.md
services/canonical_ingest/src/: classify.rs  config.rs  lib.rs  main.rs  metrics.rs  producer_identity.rs  server.rs  verifier.rs  verify_chain_lib.rs
services/canonical_ingest/tests/: mirror_crate_compile_fence.rs  quarantine_release_postgres.rs
services/cli/: Cargo.toml
services/cli/src/: ca.rs  lib.rs  main.rs  paths.rs
services/cli/tests/: shell_integration.rs  trust_linux.rs  trust_macos.rs  trust_windows.rs  uninstall_smoke.rs
services/control_plane/: Cargo.toml  build.rs
services/control_plane/migrations/: 0001_predictor_plugin_endpoints.sql  0002_audit_outbox.sql  0003_tokenizer_sampling_rate_overrides.sql  0004_tokenizer_shadow_security_settings.sql  0005_control_plane_audit_forwarder_role.sql  0006_predictor_plugin_client_cert_id_shape.sql  0007_audit_sequence_allocator.sql
services/control_plane/src/: audit_forwarder.rs  main.rs  metrics.rs
services/cost_advisor/: Cargo.toml  build.rs
services/cost_advisor/docs/: control-plane-integration.md
services/cost_advisor/migrations/: 01_cost_findings.sql  02_cost_baselines.sql
services/cost_advisor/src/: fingerprint.rs  lib.rs  patch_validator.rs  proposal_writer.rs  rule.rs  runtime.rs  sql_rule.rs
services/cursor_codec/: Cargo.toml  PROTOCOL.md  README.md  RECON.md  SOW.md  build.rs
services/cursor_codec/fixtures/: README.md
services/dashboard/: Cargo.toml
services/doctor/: Cargo.toml
services/egress_proxy/: Cargo.toml  build.rs
services/endpoint_catalog/: Cargo.toml  README.md
services/envoy_extproc/: Cargo.toml  build.rs
services/ids/: Cargo.toml
services/importer_genspark/: Cargo.toml  README.md
services/importer_manus/: Cargo.toml  README.md
services/leases/: Cargo.toml
services/ledger/: Cargo.toml  README.md  build.rs
services/outbox_forwarder/: Cargo.toml  build.rs
(+2587 files in other folders)
