[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "spendguard-pydantic-ai"
version = "0.1.0a1"
description = "SpendGuard Pydantic-AI adapter — L3 UsageLimits hooks via sidecar UDS gRPC."
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "SpendGuard authors" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "grpcio>=1.62",
  "protobuf>=4.25,<6",
  "pydantic>=2.6",
  "pydantic-ai>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "grpcio-tools>=1.62",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
"Homepage" = "https://github.com/spendguard/spendguard"

[tool.hatch.build.targets.wheel]
packages = ["src/spendguard_pydantic_ai"]

[tool.hatch.build.targets.wheel.force-include]
"src/spendguard_pydantic_ai/_proto" = "spendguard_pydantic_ai/_proto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "ASYNC", "S"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
