[project]
name = "spendguard-claude-agent-sdk-example"
version = "0.1.0"
description = "Runnable example of Anthropic's claude-agent-sdk gated by the SpendGuard egress proxy."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["example"]
