[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "spendguard-sdk"
version = "0.5.0"
description = "SpendGuard SDK — runtime safety layer client for AI agent frameworks (Pydantic-AI, LangChain, LangGraph, OpenAI Agents SDK). SLICE_12: default token estimators + with_run_plan decorator (Signal 3)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Michael Chen", email = "m24927605@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries",
  "Development Status :: 4 - Beta",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

# Core deps: the SpendGuardClient + proto stubs only. Framework deps
# are gated behind extras so a user who only writes raw OpenAI SDK code
# doesn't pull in pydantic-ai / langchain / etc.
#
# SLICE_12: `tiktoken` and `tokenizers` are CORE deps, not extras —
# the default `claim_estimator` in every integration uses them for
# any OpenAI / Anthropic / Gemini model. Skipping them would force
# every adapter user to supply a manual estimator (regression vs 0.4.0
# where `claim_estimator` was a required parameter; users were
# building chars/4 stubs by hand). Both deps are <1MB each.
dependencies = [
  "grpcio>=1.62",
  "protobuf>=4.25,<6",
  "pydantic>=2.6",
  "tiktoken>=0.6,<1.0",
  "tokenizers>=0.20,<1.0",
]

[project.optional-dependencies]
pydantic-ai = [
  "pydantic-ai>=0.0.20,<0.1.0",
]
langchain = [
  "langchain-core>=0.3",
  "langchain>=0.3",
]
langgraph = [
  "langchain-core>=0.3",
  "langgraph>=0.2",
]
openai-agents = [
  "openai-agents>=0.17",
]
agt = [
  "agent-governance-toolkit>=3.4",
  "agent-os-kernel>=3.0",
]
litellm = [
  # `[proxy]` sub-extra pulls fastapi/uvicorn/gunicorn that the
  # `litellm` CLI subprocess needs to boot. Without it,
  # `python -m litellm --config ...` ImportErrors at startup
  # (Slice 6 R1 Code Reviewer P0).
  "litellm[proxy]>=1.50,<2.0",
]
dev = [
  "grpcio-tools>=1.62",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/m24927605/agentic-spendguard"
Repository = "https://github.com/m24927605/agentic-spendguard"
Issues = "https://github.com/m24927605/agentic-spendguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/spendguard"]

# SLICE_12 Phase B: ensure vendored tokenizer JSON assets are
# explicitly forced into the wheel. hatchling treats *.json under
# `src/spendguard/data/` as package data automatically, but the
# force-include guards against future builds that exclude non-Python
# extensions or pyproject churn dropping the data path.
[tool.hatch.build.targets.wheel.force-include]
"src/spendguard/data/anthropic_claude3_tokenizer.json" = "spendguard/data/anthropic_claude3_tokenizer.json"
"src/spendguard/data/gemini_1_5_tokenizer.json" = "spendguard/data/gemini_1_5_tokenizer.json"

# Sdist explicit inclusion: pyproject's `tool.hatch.build` defaults
# include all of `src/`, but make the data dependency explicit so a
# user inspecting `pip download --no-binary` sees the assets.
[tool.hatch.build.targets.sdist]
include = [
  "src/spendguard/",
  "LICENSE_NOTICES.md",
  "README.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "ASYNC", "S"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
