[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "spendguard-sdk"
version = "0.5.1"
description = "SpendGuard SDK — runtime safety layer client for AI agent frameworks (Pydantic-AI, LangChain, LangGraph, OpenAI Agents SDK). SLICE_12: default token estimators + with_run_plan decorator (Signal 3)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Michael Chen", email = "m24927605@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries",
  "Development Status :: 4 - Beta",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

# Core deps: the SpendGuardClient + proto stubs only. Framework deps
# are gated behind extras so a user who only writes raw OpenAI SDK code
# doesn't pull in pydantic-ai / langchain / etc.
#
# SLICE_12: `tiktoken` and `tokenizers` are CORE deps, not extras —
# the default `claim_estimator` in every integration uses them for
# any OpenAI / Anthropic / Gemini model. Skipping them would force
# every adapter user to supply a manual estimator (regression vs 0.4.0
# where `claim_estimator` was a required parameter; users were
# building chars/4 stubs by hand). Both deps are <1MB each.
dependencies = [
  "grpcio>=1.62",
  "protobuf>=4.25,<6",
  "pydantic>=2.6",
  "tiktoken>=0.6,<1.0",
  "tokenizers>=0.20,<1.0",
]

[project.optional-dependencies]
pydantic-ai = [
  # CVE-2026-25580 affects pydantic-ai/pydantic-ai-slim before
  # 1.56.0. As of 2026-06-02, PyPI does not expose a fixed
  # pydantic-ai>=1.56.0 release to this resolver, so keep the extra
  # fail-closed instead of installing known-vulnerable 0.x packages.
  # The integration module still works when operators provide a vetted,
  # non-vulnerable pydantic-ai release in their environment.
]
langchain = [
  "langchain-core>=0.3",
  "langchain>=0.3",
]
langgraph = [
  "langchain-core>=0.3",
  "langgraph>=0.2",
]
openai-agents = [
  "openai-agents>=0.17",
]
# COV_D19 SLICE_1: Google ADK Python adapter extra. `google-adk` 1.x
# is the GA line shipping `LlmAgent` + `before_model_callback` /
# `after_model_callback`. Cap below 2.x to fail-closed against a
# future breaking-change major. See
# `docs/specs/coverage/D19_google_adk/design.md` §5.
adk = [
  "google-adk>=1.0,<2",
]
# COV_D20 SLICE_1: AWS Strands Agents SDK extra. `strands-agents` 1.x is
# the GA line shipping `HookProvider.register_hooks(registry)` with
# `BeforeInvocationEvent` / `AfterInvocationEvent`. Cap below 2.x to
# fail-closed against a future breaking-change major. See
# `docs/specs/coverage/D20_aws_strands/design.md` §5. The hook layer
# is model-agnostic so the same provider gates Bedrock + OpenAI +
# Anthropic + Gemini + Ollama + LiteLLM backends identically.
strands = [
  "strands-agents>=1.0,<2",
]
# COV_D21 SLICE 1: DSPy Python adapter extra. ``dspy-ai`` >=2.6 ships
# the GA ``BaseCallback`` (``on_lm_start`` / ``on_lm_end``) with stable
# UUID ``call_id`` semantics; earlier 0.x releases used
# ``dspy.functional`` wrappers that did not fire per LM call. Cap below
# 3.x to fail-closed against a future breaking-change major. The
# integration also coexists with D12 (LiteLLM SDK shim) via the shared
# ``spendguard._litellm_shim._IN_FLIGHT`` contextvar.  See
# ``docs/specs/coverage/D21_dspy/design.md`` §5.
dspy = [
  "dspy-ai>=2.6,<3.0",
]
# COV_D07 SLICE_05: Microsoft Agent Framework (MAF) v1 GA extra. The
# `agent-framework` umbrella package re-exports everything from
# `agent-framework-core` (chat client + middleware contracts) so
# the standard install path matches the design.md §3.4 install hint
# `pip install 'spendguard-sdk[agent-framework]'`. The middleware
# contract (`from agent_framework import ChatMiddleware`) is GA as of
# the 1.x line; we cap below 2.x to fail-closed against a future
# breaking-change major.
agent-framework = [
  "agent-framework>=1.0,<2",
]
agt = [
  "agent-governance-toolkit>=3.4",
  "agent-os-kernel>=3.0",
]
# COV_D22 SLICE 1: Agno Python adapter extra. `agno` ships
# ``pre_hooks=[...]`` / ``post_hooks=[...]`` on ``Agent.run`` /
# ``arun`` starting with the 2.x line (agno 2.0+) — see
# ``docs/specs/coverage/D22_agno/design.md``. The spec's ``>=1.0,<2.0``
# cap was authored against an early proposal; the public surface
# crystallised in the 2.x line (provider-agnostic callable hooks,
# ``inspect``-based signature injection that filters by parameter
# name). We pin ``>=2.0,<3.0`` so the extra fail-closes against a
# future breaking-change major. Hook callables MUST declare the
# literal parameter names Agno injects: ``(agent, run_input,
# run_context, session)`` for ``pre_hooks`` and ``(agent, run_output,
# run_context, session)`` for ``post_hooks`` — see
# ``agno.agent._hooks.execute_pre_hooks`` and ``execute_post_hooks``.
agno = [
  "agno>=2.0,<3",
]
# COV_D23 SLICE 1: BeeAI Framework (IBM Research + Linux Foundation)
# Python adapter extra. ``beeai-framework`` ships ``Emitter`` with
# ``match(matcher, callback, options) -> CleanupFn`` and ``EventMeta``
# (``id``, ``name``, ``path``, ``created_at``, ``source``, ``creator``,
# ``context``, ``group_id``, ``trace``, ``data_type``) — verified
# against the live wheel at
# ``beeai_framework/emitter/emitter.py:30-235``.
#
# DEVIATION-A vs spec §4 / design.md pyproject hint ``>=0.3,<1.0``:
# BeeAI's actual PyPI release line is ``0.1.x`` (latest ``0.1.81`` as
# of 2026-06-08). The ``>=0.3`` cap in design.md predates the
# project's first PyPI publish under the ``beeai-framework`` name;
# the IBM team is still on the 0.1.x series. We pin
# ``>=0.1.81,<0.2`` so the extra:
#   1. Fail-closes against a future breaking-change minor (0.2 line),
#   2. Floors at the version where ``Emitter.match`` returns a
#      ``CleanupFn`` and the agent-runtime ``BaseAgent.emitter``
#      cached_property is stable (verified at
#      ``beeai_framework/agents/base.py``).
beeai = [
  "beeai-framework>=0.1.81,<0.2",
]
# COV_D24 SLICE 1: AutoGen 0.4+ / AG2 Python adapter extra. Both
# lineages re-export ``autogen_core.models.ChatCompletionClient`` as
# the LLM abstraction. Operators pick the lineage they need
# (autogen-agentchat or ag2) — the extra only resolves the shared
# ``autogen-core`` base so we never force one lineage on the other.
# Cap below 1.x to fail-closed against a future breaking-change major.
# See ``docs/specs/coverage/D24_autogen_ag2/design.md``.
autogen = [
  "autogen-core>=0.4,<1.0",
]
litellm = [
  # `[proxy]` sub-extra pulls fastapi/uvicorn/gunicorn that the
  # `litellm` CLI subprocess needs to boot. Without it,
  # `python -m litellm --config ...` ImportErrors at startup
  # (Slice 6 R1 Code Reviewer P0).
  "litellm[proxy]>=1.50,<2.0",
  # Trivy CVE-2026-42544: granian <2.7.4 can panic on malformed
  # WebSocket subprotocol headers. litellm[proxy] can resolve an older
  # granian without this direct floor.
  "granian>=2.7.4",
]
# COV_D11 SLICE 5 (review-standards §5.2 Blocker): NEW canonical extras
# name `litellm-guardrail` for the `CustomGuardrail`-based proxy plugin
# shipped in `spendguard.integrations.litellm_guardrail`. Floor is
# `litellm[proxy]>=1.55.0` since `CustomGuardrail` is the LiteLLM 1.55+
# surface — earlier releases shipped the legacy `CustomLogger` path
# only (still wired by the `litellm` extra above, floor 1.50).
#
# Distinct from the legacy `litellm` extra above so existing operators
# on `pip install spendguard-sdk[litellm]` are NEVER force-upgraded
# past 1.50 (review-standards §5.2: "Existing `litellm` extra
# unchanged"). The two extras can coexist; operators wanting both
# surfaces install both.
litellm-guardrail = [
  "litellm[proxy]>=1.55,<2.0",
  # Carry forward the CVE-2026-42544 granian floor — `litellm[proxy]`
  # can resolve an older granian without this direct pin.
  "granian>=2.7.4",
]
dev = [
  "grpcio-tools>=1.62,<1.72",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/m24927605/agentic-spendguard"
Repository = "https://github.com/m24927605/agentic-spendguard"
Issues = "https://github.com/m24927605/agentic-spendguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/spendguard"]

# SLICE_12 Phase B: ensure vendored tokenizer JSON assets are
# explicitly forced into the wheel. hatchling treats *.json under
# `src/spendguard/data/` as package data automatically, but the
# force-include guards against future builds that exclude non-Python
# extensions or pyproject churn dropping the data path.
[tool.hatch.build.targets.wheel.force-include]
"src/spendguard/data/anthropic_claude3_tokenizer.json" = "spendguard/data/anthropic_claude3_tokenizer.json"
"src/spendguard/data/gemini_1_5_tokenizer.json" = "spendguard/data/gemini_1_5_tokenizer.json"

# Sdist explicit inclusion: pyproject's `tool.hatch.build` defaults
# include all of `src/`, but make the data dependency explicit so a
# user inspecting `pip download --no-binary` sees the assets.
[tool.hatch.build.targets.sdist]
include = [
  "src/spendguard/",
  "LICENSE_NOTICES.md",
  "README.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "ASYNC", "S"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
